# companion

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.CN.md  README.JP.md  README.KR.md  README.md  RUN.bat  dockerfile  gitignore  mcp_servers.json  model_dict.json  pyproject.toml  requirements-bilibili.txt  requirements.txt  run_server.py  upgrade.py  运行说明.txt
.cursor/rules/: olv-core-rules.mdc
.gemini/: GEMINI.md  styleguide.md
.github/workflows/: docker-blacksmith.yml  update-requirements.yml
backgrounds/: README.md
characters/: README.md
config_templates/: conf.ZH.default.yaml  conf.default.yaml
doc/: README.md
prompts/: README.md
prompts/utils/: live_prompt.txt  mcp_prompt.txt  proactive_speak_prompt.txt  speakable_prompt.txt  tool_guidance_prompt.txt
scripts/: run_bilibili_live.py
src/open_llm_vtuber/: message_handler.py  proxy_handler.py  proxy_message_queue.py  routes.py  server.py  service_context.py  websocket_handler.py
src/open_llm_vtuber/agent/: agent_factory.py  transformers.py
src/open_llm_vtuber/agent/agents/: basic_memory_agent.py  hume_ai.py  letta_agent.py
src/open_llm_vtuber/agent/stateless_llm/: openai_compatible_llm.py
src/open_llm_vtuber/config_manager/: __init__.py  agent.py  asr.py  i18n.py  live.py  main.py  stateless_llm.py  system.py  tts.py  vad.py
src/open_llm_vtuber/conversations/: conversation_handler.py  conversation_utils.py  group_conversation.py  single_conversation.py
src/open_llm_vtuber/live/: bilibili_live.py  live_interface.py
src/open_llm_vtuber/mcpp/: json_detector.py  mcp_client.py  server_registry.py  tool_adapter.py  tool_executor.py  tool_manager.py  types.py
src/open_llm_vtuber/tts/: cartesia_tts.py  elevenlabs_tts.py  openai_tts.py
src/open_llm_vtuber/utils/: sentence_divider.py
upgrade_codes/: compare_yaml.py  config_sync.py  upgrade_manager.py  version_manager.py
upgrade_codes/from_version/: v_1_1_1.py
upgrade_codes/upgrade_core/: comment_diff_fn.py  comment_sync.py  constants.py  language.py  upgrade_utils.py
(+1 files in other folders)
